[package]
name = "session-axum-redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
dotenv = "0.15.0"
handlebars = "4.2.2"
lazy_static = "1.4.0"
redis ={ version =  "0.21.5", features = ["tls"] }
tokio = { version = "1.19.2", features = ["full"] }
serde_json = "1.0.81"
serde = { version = "1.0", features = ["derive"] }
